@@ -353,11 +353,8 @@ toDirectGen k f = do
 		void $ addAssociatedFile k f
 		modifyContent loc $ do
 			thawContent loc
-			replaceFileOr f
-				(liftIO . moveFile loc)
-				$ \tmp -> do -- rollback
-					liftIO (moveFile tmp loc)
-					freezeContent loc
+			liftIO (replaceFileFrom loc f)
+				`catchIO` (\_ -> freezeContent loc)
 	fromdirect loc = do
 		replaceFile f $
 			liftIO . void . copyFileExternal loc
